--- a/static/css/lobby.css
+++ b/static/css/lobby.css
@@ -34,3 +34,34 @@ body {
 .container button:hover {
   background-color: #0056b3;
 }
+
+.container h2 {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #dddddd;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tbody tr {
+  cursor: pointer;
+}
+
+tbody tr:hover {
+  background-color: #f9f9f9; /* Light grey background on hover */
+}
+
+
